small home page update

--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Benjamin C. Price
+email: benprice@uw.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My name is Benjamin Price. I am a Ph.D. student at the University of Washington
+  in Seattle, WA, United States of America. My research is on non-thermal plasma and
+  electrohydrodynamics (EHD). Specifically, active flow control applications of dielectric
+  barrier discharge (DBD) plasma actuators through experimental work and computational
+  fluid dynamics (CFD) modeling. Looking forward to learning with you!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+linkedin_username: price-ben
+github_username:  benprice2310
 
 # Build settings
 theme: minima
